--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ __pycache__/YouDownloader.cpython-37.pyc
 .DS_Store
 YouDownloader.spec
 dist/YouDownloader
+__pycache__/YouDownloader.cpython-38.pyc
+output/YouDownloader.exe
